--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <body>
     <nav>
         <a href="/" data-pjax>Home</a>
-        <a href="/src/dr-richard-dune.html" data-pjax>Dr Richard Dune</a>
-        <a href="/src/about.html" data-pjax>About</a>
+        <a href="./src/dr-richard-dune.html" data-pjax>Dr Richard Dune</a>
+        <a href="./src/about.html" data-pjax>About</a>
     </nav>
 
     <main id="main" tabindex="-1">
