--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <nav>
-        <a href="/" data-pjax>Home</a>
+        <a href="index.html" data-pjax>Home</a>
         <a href="./src/dr-richard-dune.html" data-pjax>Dr Richard Dune</a>
         <a href="./src/about.html" data-pjax>About</a>
     </nav>
